--- a/9. Quiz/package.json
+++ b/9. Quiz/package.json
@@ -1,12 +1,13 @@
 {
   "name": "quiz",
   "version": "1.0.0",
-  "description": "",
+  "description": "Enjoy your quiz!",
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "webpack-dev-server --hot --inline --open --mode development",
-    "build": "webpack --mode production"
+    "dev": "webpack-dev-server --hot --inline --config webpack.dev.js --open",
+    "lint": "eslint ./src/**/**.jsx",
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "snowleo208",
   "license": "ISC",
@@ -15,27 +16,36 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.2",
     "clean-css-loader": "^1.0.1",
     "clean-webpack-plugin": "^0.1.19",
+    "compression": "^1.7.3",
     "css-loader": "^1.0.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "eslint": "^5.6.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
-    "html-loader": "^0.5.5",
     "html-webpack-harddisk-plugin": "^0.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
-    "path": "^0.12.7",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "prop-types": "^15.6.2",
     "react-hot-loader": "^4.3.7",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8"
+    "webpack-dev-server": "^3.1.8",
+    "webpack-merge": "^4.1.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
+    "react-transition-group": "^2.4.0"
+  }
 }
